[gd_scene load_steps=6 format=3 uid="uid://26jp2p4rytq"]

[ext_resource type="Script" path="res://actors/pilots/pilot.gd" id="1_rcu0v"]
[ext_resource type="PackedScene" uid="uid://oaie2edlf0a5" path="res://actors/pilots/offscreen_marker.tscn" id="2_jkwsm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8s4r4"]

[sub_resource type="SphereShape3D" id="SphereShape3D_263lc"]
radius = 500.0

[sub_resource type="SphereShape3D" id="SphereShape3D_7mrom"]
radius = 1000.0

[node name="Pilot" type="Area3D"]
monitoring = false
script = ExtResource("1_rcu0v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_8s4r4")

[node name="DetectionRadar" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionRadar"]
shape = SubResource("SphereShape3D_263lc")

[node name="TrackingRadar" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="TrackingRadar"]
shape = SubResource("SphereShape3D_7mrom")

[node name="OffscreenMarker" parent="." instance=ExtResource("2_jkwsm")]

[connection signal="area_entered" from="DetectionRadar" to="." method="_on_detection_radar_area_entered"]
[connection signal="area_exited" from="TrackingRadar" to="." method="_on_tracking_radar_area_exited"]
